kitbook-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitbook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitbook-mysql
  template:
    metadata:
      name: kitbook-mysql
      labels:
        app: kitbook-mysql
    spec:
      containers:
        - name: kitbook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath:  /var/lib/mysql
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: kitbook-mysql-pvc
