kitbook-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitbook-redis

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitbook-redis
  template:
    metadata:
      labels:
        app: kitbook-redis
    spec:
      containers:
        - name: kitbook-redis
          image: redis:latest
          ports:
            - containerPort: 6379
