kitbook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitbook-mysql
spec:
  selector:
    app: kitbook-mysql
  ports:
    - protocol: TCP
      port: 3308
      nodePort: 31186
      targetPort: 3306
  type: NodePort
