kitbook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitbook-redis
spec:
  selector:
    app: kitbook-redis
  ports:
    - protocol: TCP
      port: 6380
#      外部访问端口，必须在30000-32676之间
      nodePort: 31379
      targetPort: 6379
  type: NodePort
